[package]
name = "bevy_starry_skybox"
version = "0.1.0"
authors = ["Ben Harper <ben@tukom.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", features = ["dynamic"] }
noise = "0.5"
